@@ -26,6 +26,7 @@
 package org.niis.xroad.serverconf.impl;
 
 import ee.ria.xroad.common.CodedException;
+import ee.ria.xroad.common.SystemProperties;
 import ee.ria.xroad.common.conf.InternalSSLKey;
 import ee.ria.xroad.common.db.TransactionCallback;
 import ee.ria.xroad.common.identifier.ClientId;
@@ -53,6 +54,8 @@ import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.Strings;
 import org.hibernate.Session;
 import org.hibernate.SharedSessionContract;
+import org.niis.xroad.common.CostType;
+import org.niis.xroad.common.CostTypePrioritizer;
 import org.niis.xroad.globalconf.GlobalConfProvider;
 import org.niis.xroad.serverconf.IsAuthentication;
 import org.niis.xroad.serverconf.ServerConfProvider;
@@ -85,7 +88,6 @@ import org.niis.xroad.serverconf.model.ServiceDescription;
 import org.niis.xroad.serverconf.model.TimestampingService;
 
 import java.io.IOException;
-import java.net.URI;
 import java.security.KeyStoreException;
 import java.security.NoSuchAlgorithmException;
 import java.security.UnrecoverableKeyException;
@@ -355,15 +357,27 @@ public class ServerConfImpl implements ServerConfProvider {
     }
 
     @Override
-    public List<String> getTspUrl() {
+    public List<String> getTspUrls() {
         return tx(session -> getConf(session).getTimestampingServices().stream()
                 .map(TimestampingService::getUrl)
                 .filter(StringUtils::isNotBlank)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     @Override
-    public String getTspCostType(String tspUrl) {
+    public List<String> getOrderedTspUrls() {
+        return tx(session -> {
+            CostTypePrioritizer<TimestampingService> sorter =
+                    new CostTypePrioritizer<>(getConf(session).getTimestampingServices());
+            SystemProperties.ServicePrioritizationStrategy prioritizationStrategy =
+                    SystemProperties.getTimestampingPrioritizationStrategy();
+            log.debug("Timestamping urls will be sorted based on prioritization strategy: {}", prioritizationStrategy);
+            return sorter.prioritize(prioritizationStrategy);
+        });
+    }
+
+    @Override
+    public CostType getTspCostType(String tspUrl) {
         return tx(session -> getConf(session).getTimestampingServices().stream()
                     .filter(t -> Strings.CS.equals(t.getUrl(), tspUrl))
                     .findFirst()
@@ -462,7 +476,13 @@ public class ServerConfImpl implements ServerConfProvider {
         if (path == null) {
             normalizedPath = null;
         } else {
-            normalizedPath = UriUtils.uriPathPercentDecode(URI.create(path).normalize().getRawPath(), true);
+            normalizedPath = UriUtils.decodeAndNormalize(path);
+
+            // Explicitly reject any remaining traversal sequences
+            if (normalizedPath.contains("..")) {
+                log.warn("Path traversal detected in request path: {}. Access will be rejected.", path);
+                return false;
+            }
         }
         return getAclEndpoints(session, clientId, serviceId).stream()
                 .anyMatch(ep -> ep.matches(method, normalizedPath));
